add to favourite

--- a/index.html
+++ b/index.html
@@ -327,6 +327,8 @@
                 </tbody>
             </table>
             <p id="total-price">₨ 0.00</p>
+            <button id="addto">Add to favorites</button>
+            <button id="apply">Apply favorites</button>
             <button id="clear-cart-button">Clear Cart</button>
             <button id="checkout-button">Buy Now</button>
         </div>
